--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 rvm:
   - 2.3.1
-script: bundle exec rake
+script: bundle exec rake spec
 after_script: bundle exec codeclimate-test-reporter
 notifications:
   email: false
